--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="./script.js" defer></script>
     <title>Abito | Design</title>
 </head>
 <body>
@@ -49,7 +50,7 @@
                         <h2 class="content-main__title">Рекомендации для вас</h2>
                         <div class="content-main__list">
 
-                            <a href="/product.html" class="content-main__list-item">
+                            <!-- <a href="/product.html" class="content-main__list-item">
 
                                 <div class="content-main__list-item--img">
                                     <img src="images/card-img.png" alt="card-img">
@@ -155,7 +156,7 @@
                                     <span class="content-main__list-item--desc">Казань, р-н Вахитовский</span>
                                     <span class="content-main__list-item--desc">10 июля 11:39</span>
                                 </div>
-                            </a>
+                            </a> -->
 
                         </div>
                     </div>
